--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <time id="time"></time>
   <h1>
     <span id="greeting" contenteditable="true">Good Afternoon</span>
-    <span id="name" contenteditable="true">Tyler</span>
+    <span id="name" contenteditable="true"></span>
   </h1>
   <h2>What is your focus for today?</h2>
-  <h2 id="focus" contenteditable="true">Make cool videos</h2>
+  <h2 id="focus" contenteditable="true"></h2>
     <script src="./js/main.js"></script>
 </body>
 </html>
